footer social icons spacing fix

--- a/assets/css/uni-theme.css
+++ b/assets/css/uni-theme.css
@@ -1744,6 +1744,7 @@ body {
 
 .footer .widget-link {
   text-decoration: none;
+  margin-left: 15px;
 }
 
 .footer .widget-link svg {
