--- a/assets/sass/_footer.sass
+++ b/assets/sass/_footer.sass
@@ -75,6 +75,7 @@
         margin-bottom: 25px
   .widget-link
     text-decoration: none
+    margin-left: 15px
     svg
       width: 40px
       height: 40px
